--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,9 +32,12 @@ dependencies:
   cupertino_icons: ^1.0.6
   dio: ^5.4.3+1
   equatable: ^2.0.5
+  fade_shimmer: ^2.2.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.5
+  flutter_svg: ^2.0.10+1
+  get: ^4.6.6
   http: ^1.2.1
   shared_preferences: ^2.2.3
 
